# PL-Homework

CMakeHomework-F74055047/: CMakeLists.txt
plhw1/: .gitignore  problem1.lsp  problem2.lsp  problem3.lsp
plhw2/: plhw2.py  plhw2_report.odt
plhw3/: .~lock.plhw3_report.odt#  hanoi.pl  plhw3_report.odt  plhw3p1.pl  plhw3p2.pl  plhw3p3.pl  testpl.pl  testpl2.pl
